# AtlasMesh-Fleet-OS

./: COMPREHENSIVE_ANALYSIS_AND_TODOS.md  DEBUG_REPORT.md  FLEET_MANAGEMENT_IMPLEMENTATION_SUMMARY.md  Makefile  Makefile.diagrams  PRODUCTION_RUNBOOK.md  README.md  SERVICE_INVENTORY.md  debug_dashboard.html  debug_fleet_os.py  demo_production_framework.py  deployment-validation-report.md  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  package.json  production-framework-demo-summary.json  run_production_validation.py  run_system.py  start_debug_environment.py  system_test.py  test-environment.ps1
_templates/: README.edge.tpl.md  README.tpl.md  README.ui.tpl.md  readme.diagrams.schema.yaml
adapters/: README.md
analytics-service/cmd/: main.go
api/: README.md
api-gateway/: go.mod
api/contracts/: registry.yaml
auditability/: README.md
cache-manager/: go.mod
chaos-engineering/: README.md
ci/gates/: gate-definitions.yaml
ci/performance-gates/: performance-gate.js
config/environments/: production.yaml  staging.yaml  uat.yaml
configs/: README.md
configs/base/: slos.yaml  thermal_derating.yaml
configs/environments/: development.yaml
configs/map/: README.md
configs/nfrs/: README.md  quantified_nfrs.yaml
configs/sensor-packs/: highway-c.json  rugged-a.json  schema.json  urban-b.json
configs/services/: base.yaml  defense.yaml  logistics.yaml  mining.yaml  ride_hail.yaml
configs/tools/: loader.go
configs/vehicles/: light_industrial_utv.yaml  mine_haul_400t.yaml  terminal_tractor_v2.yaml
control-center-ui/: go.mod
data/contracts/: kpis.yaml
database-optimization/optimization/: connection_pooling.conf  performance_tuning.sql
database-optimization/stored_procedures/: fleet_analytics.sql
database/optimization/: postgresql.conf.optimized
database/stored_procedures/: predictive_maintenance.sql
deploy/kubernetes/: namespace.yaml
deploy/scripts/: deploy.ps1
deployment/argocd/: fleet-os-dev.yaml  fleet-os-production.yaml  fleet-os-staging.yaml
deployment/scripts/: deploy.sh
deployment/sectors/: README.md  deploy.sh
diagrams/: IMPLEMENTATION_SUMMARY.md
diagrams/api/: service_api_topology_v1.mmd
diagrams/erd/: fleet_core_database_v1.puml
diagrams/ros2/: vehicle_agent_nodes_v1.puml
diagrams/threat/: vehicle_communication_stride_v1.puml
docs/: CHANGELOG_DEFENSE_USE_CASES.md  CONTROL_CENTER_UI_SPECIFICATION.md  Deployment_Guide.md  PM_COP_MAPPING.md  ReadMe.md  UI_Architecture_Proposal.md  index.md
docs/ADR/: 0001-vehicle-agnostic.md  0002-platform-agnostic.md  0003-sector-agnostic.md  0004-sensor-agnostic.md  0005-map-source-agnostic.md  0006-weather-source-agnostic.md  0007-comms-agnostic.md  0008-ros2-edge-stack.md  0009-hybrid-decision-framework.md  0010-simulation-strategy.md  0011-qualified-agnosticism.md  0012-variant-budget-enforcement.md  0013-conformance-testing.md  README.md  adr-enhancement-template.md
docs/Strategy/: 00_Problem_Statement_and_Solution_ALL_SECTORS.md  01_Executive_Summary_and_Vision.md  08_Risk_and_Mitigations.md  12_Product_Roadmap_and_Milestones.md
docs/Technical/: 01_Architecture.md  02_Epics_And_Strategic_Alignment.md  02_Epics_and_Strategic_Alignment.md  03_Requirements_FRs_NFRs.md  04_Data_and_Analytics_Integration.md  05_Security_and_Compliance.md  05_Sequence_Diagrams_and_System_Flows.md  06_Operations_and_Runbooks.md  07_Sensor_Data_Collection_Strategy.md  07_Service_Registry.md  08_Qualified_Agnosticism.md  09_Five_Constraining_Realities.md  10_Feasibility_Scorecard.md  11_Agnostic_By_Contract.md  12_Cross_Department_Checklist.md  13_Programmatic_Proof_Points.md  14_Architecture_Reality_Check.md  15_Data_Models_and_ERDs.md  16_Sequence_Diagrams_and_System_Flows.md  19_Sensor_Data_Collection_Strategy.md  20_Service_Registry.md  21_Complete_System_Architecture.md  25_Fleet_Management_Features.md  26_Integration_Guides.md  Telemetry_Dictionary.md
docs/api/: API_REFERENCE.md  README.md
docs/database/: DATABASE_COMPREHENSIVE_DOCUMENTATION.md  DATABASE_VALIDATION_REPORT.md
docs/deployment/: DEPLOYMENT_GUIDE.md
docs/diagrams/: README.md
docs/operations/: README.md
docs/strategy/: 00_Problem_Statement_and_Solution.md  00_Problem_Statement_and_Solution_ALL_SECTORS.md  01_Executive_Summary_and_Vision.md  02_Market_Insights_&_Jobs-To-Be-Done_JTBD.md  02_Market_and_User_Insights.md  02_Personas_and_Scenarios.md  03_OKRs_and_Metrics_Canon.md  03_Objectives_and_Key_Results_OKRs.md  04_Metrics_Canon.md  04_Product_and_Marketplace_Strategy.md  05_Go_to_Market_Strategy.md  05_Product_and_Marketplace_Strategy.md  06_Go_to_Market_Strategy.md  06_Risk_and_Governance.md  07_Business_Model_and_Financials.md  07_Risk_and_Governance.md  08_Product_Roadmap.md  08_Product_Roadmap_& Milestones.md  09_Risk_Register_Phase_Gated.md  10_Personas_and_Scenarios.md  11_Business_Model_and_Financials.md  12_Product_Roadmap_and_Milestones.md  AtlasMesh_Fleet_OS_Presentation.md  DOCUMENTATION_CHANGES_SUMMARY.md  Decision_Log_DACI.md  Product_Decision_Log_DACI.md  SERVICE_CODE_CHANGES_PLAN.md
docs/training/: README.md
docs/troubleshooting/: TROUBLESHOOTING_GUIDE.md
docs/use-cases/: 00_taxonomy.md  README.md  (+1 more)
edge/: docker-compose.edge.yml
edge/vehicle-agent/: CMakeLists.txt  package.xml
edge/vehicle-agent/config/vehicle_profiles/: ugv_themis.yaml
edge/vehicle-agent/launch/: vehicle_agent.launch.py
edge/vehicle-agent/msg/: VehicleCommand.msg  VehicleProfile.msg  VehicleState.msg
edge/vehicle-agent/src/: vehicle_agent_node.cpp  vehicle_controller.hpp
incident-response/: incident-bot.py
infrastructure/: docker-compose.yml
rules/: README.md
scripts/: Deploy-UIModules.ps1  deploy-ui-modules.sh  deploy.sh  health-check.sh  implement-fleet-handlers.go  init-databases.sh  init-kafka-topics.sh  init-security.sh  performance-budgets.sh  pgadmin-servers.json  run-system.py  setup_dev.sh  validate-system.sh
services/: README.md  ReadMe.md
tools/: code-analysis-report.md  evidence-bundle-generator.js  package.json  run-variant-analysis.ps1  variant-budget-analyzer.js
ui/: README.md  Readme.md
(+847 files in other folders)
