<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>atlasmesh_vehicle_agent</name>
  <version>1.0.0</version>
  <description>AtlasMesh Vehicle Agent - ROS2 based edge control system</description>

  <maintainer email="engineering@atlasmesh.com">AtlasMesh Engineering</maintainer>
  <license>Proprietary</license>

  <url type="website">https://atlasmesh.com</url>
  <url type="bugtracker">https://github.com/atlasmesh/fleet-os/issues</url>
  <url type="repository">https://github.com/atlasmesh/fleet-os</url>

  <author email="engineering@atlasmesh.com">AtlasMesh Engineering</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Navigation and control -->
  <depend>nav2_common</depend>
  <depend>nav2_msgs</depend>
  <depend>control_msgs</depend>
  <depend>trajectory_msgs</depend>

  <!-- Sensor processing -->
  <depend>pcl_ros</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>laser_geometry</depend>

  <!-- Communication -->
  <depend>rosbridge_suite</depend>
  <depend>mqtt_client</depend>

  <!-- Safety and monitoring -->
  <depend>safety_msgs</depend>
  <depend>health_msgs</depend>

  <!-- Custom message interfaces -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>launch_testing_ament_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
